# Pagina-CEE

./: .gitignore  CODEX_INIT.md  CODEX_INIT_CEE_CONECTA.md  README.md  README_AGENT_THREADS.md  pyproject.toml
app/: __init__.py
app/backend/: __init__.py  main.py
app/backend/api/: router.py
app/backend/audit/: __init__.py  service.py
app/backend/auth/: context.py  dependencies.py  google.py  jwt.py  permissions.py  schemas.py  service.py
app/backend/content/: __init__.py  dependencies.py  schemas.py  service.py
app/backend/core/: config.py  errors.py  (+1 more)
app/database/: schema.sql  seed.sql
docs/: 01_vision_producto.md  02_especificacion_resumida.md  03_arquitectura.md  04_agentes_workflows.md  05_checklist_validacion.md  AGENT_PROTOCOL.md  API_CONTRACT.md  CHECKLIST_VALIDACION.md  DATABASE_MODEL.md  DECISIONS.md  HANDOFFS.md  PROJECT_CONTEXT.md  QA_REPORT.md  SECURITY_REVIEW.md  UI_MAP.md
factory/: __init__.py  agents.py  cli.py  constants.py  context.py  harness.py  memory.py  observability.py  orchestrator.py  registry.py  schemas.py  validators.py
project/: Aprendizaje.md  README.md
project/agent-memory/: agent_architect.jsonl  agent_backend_developer.jsonl  agent_database_designer.jsonl  agent_documenter.jsonl  agent_frontend_developer.jsonl  agent_product_owner.jsonl  agent_qa_engineer.jsonl  agent_security_reviewer.jsonl
tests/: test_factory.py
tests/backend/: test_base_api.py  test_content_module.py  test_documents_module.py  test_events_module.py  test_finances_module.py  test_requests_module.py  test_security_base.py  test_users_module.py
(+35 files in other folders)
