[project]
name = "cee-conecta"
version = "0.1.0"
description = "Fabrica agentica SDD minima para construir CEE Conecta."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pydantic-settings>=2.0",
    "httpx>=0.25",
    "PyJWT>=2.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
